# shop_be

./: .env  .env.example  .gitignore  BigBirdLMS.postman_collection.json  Dockerfile  LICENSE  Pipfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt  setup.cfg
backend/apps/admin/: serializers.py  urls.py  views.py
backend/apps/auth/: serializers.py  urls.py  views.py
backend/apps/courses/: managers.py  models.py  serializers.py  urls.py  views.py
backend/apps/groups/: managers.py  models.py  serializers.py  urls.py  views.py
backend/apps/lessons/: models.py
backend/apps/modules/: models.py  serializers.py  urls.py  views.py
backend/apps/users/: managers.py  models.py  serializers.py
backend/configs/: settings.py  urls.py
backend/configs/extra_conf/: __init__.py  drf_yasg_conf.py  jwt_conf.py  rest_conf.py
backend/core/: models.py  pagination.py
backend/core/dataclasses/: base_dataclass.py  course_dataclass.py  module_dataclass.py  module_preview_video_dataclass.py  profile_dataclass.py  semester_dataclass.py  user_dataclass.py
backend/core/enums/: error_enum.py  regex_enum.py  token_enum.py
client/: index.html  main.js  main.js.map  polyfills.js  runtime.js  runtime.js.map  src_app_modules_main-layout_main-layout_module_ts.js  src_app_modules_main-layout_main-layout_module_ts.js.map  src_app_modules_main-layout_modules_auth_auth_module_ts.js  src_app_modules_main-layout_modules_auth_auth_module_ts.js.map  styles.css  vendor.js
frontend/: README.md  angular.json  package.json
frontend/src/: index.html
(+54 files in other folders)
