[tool.poetry]
name = "bigbirdlms"
version = "0.1.0"
description = ""
authors = ["Vitaliy Dechyshyn <demchyshyn.v87@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
djangorestframework = "^3.14.0"
psycopg = "^3.1.13"
djangorestframework-simplejwt = "^5.3.0"
drf-yasg = "^1.21.7"
django-filter = "^23.4"
pytube = "^15.0.0"
mysqlclient = "^2.2.1"
django-cors-headers = "^4.3.1"
django = "^5.0.2"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
